--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-horizontal-timeline": "^1.5.3"
+    "react-horizontal-timeline": "^1.5.3",
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
+    "@mailtop/horizontal-timeline": "^2.1.4",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3"
   }
