--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/lab": "^5.0.0-alpha.91",
     "@mui/material": "^5.9.1",
+    "@react-icons/all-files": "^4.1.0",
     "axios": "^0.27.2",
     "framer-motion": "^6.5.1",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-horizontal-timeline": "^1.5.3",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "react-perfect-scrollbar": "^1.5.8"
   },
   "devDependencies": {
     "@mailtop/horizontal-timeline": "^2.1.4",
